--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: true
 contact_links:
   - name: GitHub Discussions
-    url: https://github.com/NamVr/.../discussions
+    url: https://github.com/NamVr/Chat-Economy-Bot/discussions/
     about: Start a discussion
   - name: Discord support server
     url: https://discord.gg/soon
