--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"main": "bot.js",
 	"scripts": {
 		"start": "node bot.js",
-		"dev": "nodemon bot.js"
+		"dev": "nodemon bot.js",
+		"init": "node ./functions/build.js"
 	},
 	"repository": {
 		"type": "git",
