--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
 		"discord-api-types": "^0.33.5",
 		"discord.js": "^13.8.0",
 		"file-exists": "^5.0.1",
-		"leekslazylogger": "^4.1.7",
-		"random-number": "^0.0.9"
+		"leekslazylogger": "^4.1.7"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.16"
