🔥 | Module Toggler, Permissions, Bug Fixes
- Added a new module toggler, a new property that you can use to enable or disable chat events via slash commands! Use `/module toggle <module>` to toggle a module on/off.
- Fixed bug in `npm run init` that caused command messages to merge with each other.
- Updated config.json to handle enabling/disabling the chat-triggers (modules).
- Added ownerOnly property to slash commands to fool-proof internal management commands via slash commands.

--- a/config-example.json
+++ b/config-example.json
@@ -17,5 +17,10 @@
 	},
 	"apis": {
 		"wordnik": ""
+	},
+	"modules": {
+		"math_equation": true,
+		"speed_clicker": true,
+		"unscramble_the_word": true
 	}
 }
