--- a/config-example.json
+++ b/config-example.json
@@ -23,6 +23,22 @@
 		"daily": {
 			"amount": 1000,
 			"streak": 0
+		},
+		"beg": {
+			"positive_max": 100,
+			"positive_min": 10,
+			"negative_max": 0,
+			"negative_min": -20
+		},
+		"search": {
+			"min": 10,
+			"max": 100,
+			"wallet_lost": 25
+		},
+		"work": {
+			"min": 50,
+			"max": 100,
+			"wallet_lost": 10
 		}
 	},
 	"apis": {
