--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "namvr-chateconomy",
-	"version": "2.0.5",
+	"version": "3.0.0",
 	"types": "./typings.d.ts",
 	"description": "An open-source discord chat economy bot that has various events to be triggered randomly in your chat.",
 	"funding": "https://ko-fi.com/namanvrati",
@@ -29,9 +29,7 @@
 	},
 	"homepage": "https://github.com/NamVr/Chat-Economy-Bot#readme",
 	"dependencies": {
-		"@discordjs/builders": "^1.6.3",
-		"@discordjs/rest": "^1.7.1",
-		"discord-api-types": "^0.37.50",
+		"chalk": "^5.3.0",
 		"discord.js": "^14.11.0",
 		"leekslazylogger": "^5.0.1"
 	}
