--- a/config-example.json
+++ b/config-example.json
@@ -42,7 +42,7 @@
 		}
 	},
 	"apis": {
-		"wordnik": "http://api.wordnik.com/v4/words.json/randomWords?api_key=YOUR_API_KEY&?hasDictionaryDef=true&minCorpusCount=0&hasDictionaryDef=true&",
+		"wordnik": "http://api.wordnik.com/v4/words.json/randomWords?api_key=YOUR_API_KEY&?minCorpusCount=0&",
 		"opentdb": "https://opentdb.com/api.php?amount=1&type=multiple&encode=base64"
 	},
 	"modules": {
